# pdf_signing

./: .gitignore  CHANGELOG.md  Cargo.toml  Create_Cert.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: sign_doc.rs
src/: acro_form.rs  byte_range.rs  digitally_sign.rs  error.rs  image_insert.rs  image_insert_to_page.rs  image_xobject.rs  lib.rs  lopdf_utils.rs  pdf_object.rs  rectangle.rs  signature_image.rs  signature_info.rs  user_signature_info.rs
