[package]
name = "pdf_signing"
description = "Crate for adding signatures and digitaly sign pdf documents."
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pdf", "signing"]
categories = ["encoding", "graphics"]
repository = "https://github.com/ralpha/pdf_signing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
lopdf = { version = "0.34.0", features = ["chrono_time", "nom_parser"], default-features = false }
png = "0.17.14"
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
chrono = "0.4.38"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
cryptographic-message-syntax = "0.27.0"
x509-certificate = "0.24.0"

[features]
default = []

debug = []
